--- a/Product.html
+++ b/Product.html
@@ -32,7 +32,7 @@
                         <li>About</li>
                         <li>Product</li>
                         <li><a href="contact.html">Contact</a></li>
-                        <li><a id="cardValue" href="addToCart.html"><i class="fa-solid fa-cart-plus"></i> 0</a></li>
+                        <li><a id="listCardValue" href="addToCart.html"><i class="fa-solid fa-cart-plus"></i> 0</a></li>
                     </ul>
                 </div>
             </nav>
