--- a/addToCart.html
+++ b/addToCart.html
@@ -32,7 +32,7 @@
                         <li>About</li>
                         <li><a href="Product.html">Product</a></li>
                         <li><a href="contact.html">Contact</a></li>
-                        <li><a id="cardValue"><i class="fa-solid fa-cart-plus"></i> 0</a></li>
+                        <li><a id="listCardValue"><i class="fa-solid fa-cart-plus"></i> 0</a></li>
                     </ul>
                 </div>
             </nav>
