--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
             <li>About</li>
             <li><a href="Product.html">Product</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a class="samllCart" id="listCardValue" href="addToCart.html"><i class="fa-solid fa-cart-plus"></i>
-                0</a></li>
+            <li><a class="samllCart" id="listCardValue" href="addToCart.html">
+                <i class="fa-solid fa-cart-plus"></i> 0
+              </a>
+            </li>
           </ul>
         </div>
       </nav>
