--- a/singup.html
+++ b/singup.html
@@ -76,13 +76,31 @@
             <!-- Header Part Start -->
             <nav>
                 <div class="container nabver">
-                    <h1><a href="index.html">Tack Store</a></h1>
-                    <ul style="display: flex;">
+                    <div class="bars">
+                        <i class="fa-solid fa-bars"></i>
+                    </div>
+                    <h1 class="nabverH1"><a href="index.html">Tack Store</a></h1>
+                    <div class="rust">
+                        <ul style="display: flex;" class="nabverUl">
+                            <li><a href="index.html">Home</a></li>
+                            <li>About</li>
+                            <li><a href="Product.html">Product</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                            <li><a id="cardValue" href="addToCart.html"><i class="fa-solid fa-cart-plus"></i> 0</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="small">
+                    <ul class="samllUL">
                         <li><a href="index.html">Home</a></li>
                         <li>About</li>
                         <li><a href="Product.html">Product</a></li>
                         <li><a href="contact.html">Contact</a></li>
-                        <li><a id="cardValue" href="addToCart.html"><i class="fa-solid fa-cart-plus"></i> 0</a></li>
+                        <li><a class="samllCart" id="listCardValue" href="addToCart.html">
+                                <i class="fa-solid fa-cart-plus"></i> 0
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </nav>
@@ -170,6 +188,26 @@
 
         document.querySelector('button').addEventListener('submit', (e) => {
             e.preventDefault()
+        })
+
+
+
+        // For hide part show Start
+        let menu = false
+
+        let bars = document.querySelector('.bars')
+        let small = document.querySelector('.small')
+
+        bars.addEventListener('click', () => {
+            menu = !menu
+            if (menu == true) {
+                bars.innerHTML = `<i class="fa-solid fa-xmark"></i>`
+                small.style.display = `block`
+                small.classList.add('animationCart2')
+            } else {
+                bars.innerHTML = `<i class="fa-solid fa-bars"></i>`
+                small.style.display = `none`
+            }
         })
 
     </script>
